# gnn-experiments

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
_bmad-output/planning-artifacts/: architecture-llamaindex-rag.md  architecture.md  epics.md  product-brief-llamaindex-rag-2025-12-31.md
_bmad-output/planning-artifacts/research/: technical-gnn-blockchain-knowledge-graphs-research-2025-12-31.md  technical-llamaindex-rag-research-2025-12-31.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmgd/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
configs/: elliptic_gat.yaml  elliptic_gcn.yaml  elliptic_graphsage.yaml  fb15k_distmult.yaml  fb15k_rotate.yaml  fb15k_transe.yaml  template.yaml
docs/: epic2-implementation-guide.md
experiments/: elliptic_gat.py  elliptic_gcn.py  elliptic_graphsage.py  fb15k_kge.py  fb15k_transe.py
src/: __init__.py  config.py  distributed.py  logging_config.py  paths.py  run.py  utils.py
src/datasets/: __init__.py  elliptic.py  fb15k.py
src/models/: __init__.py  gat.py  gcn.py  graphsage.py  kge.py
src/trainers/: __init__.py  base.py  link_predictor.py  node_classifier.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_paths.py  test_trainers.py  test_utils.py
