[project]
name = "gnn-experiments"
version = "0.2.0"
description = "Graph Neural Network experiments for fraud detection and knowledge graph completion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
